<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".FragmentAbout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/customborder3"
        android:src="@drawable/fbg1"
        android:scaleType="fitXY"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textColor="#81FF03"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="#80FF00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="#80FF00"/>

<Button
    android:id="@+id/btn1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="BACK"
    android:contentDescription="@string/back_button"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:backgroundTint="#7DFA00"
    android:textColor="@color/black"
    android:textSize="15dp"
    android:textStyle="bold"/>


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>