<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentGuides">

    <!-- TODO: Update blank fragment layout -->

    <androidx.core.widget.NestedScrollView
        android:layout_above="@+id/oks"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_marginTop="15dp"
                android:textSize="30dp"
                android:textColor="#63FF00"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/gd01"
                android:text="@string/gd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#80FF00"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/button"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@drawable/customborder3"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ff3"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/gd02"
                android:text="@string/gd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#80FF00"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/button"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/customborder3"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ff4"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/gd03"
                android:text="@string/gd3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#80FF00"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/button"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@drawable/customborder3"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ff5"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/gd04"
                android:text="@string/gd4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#80FF00"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/button"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@drawable/customborder3"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ff6"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/gd05"
                android:text="@string/gd5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#80FF00"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/button"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@drawable/customborder3"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/ff7"
                android:scaleType="fitXY"/>

            <Button
                android:layout_gravity="center"
                android:id="@+id/oks"
                app:backgroundTint="#80FF00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BACK"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:contentDescription="@string/back_button"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
